--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ jupyterlab==2.2.8
 matplotlib==3.3.2
 numpy==1.19.2
 pandas==1.1.2
+pytest==6.1.1
 scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.11.0
