--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest
-        pip install pytest-cov
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        pytest-cov --cov=tubesml
+        pytest --cov=tubesml --code-report html
