--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 jupyterlab==2.2.8
+lightgbm==3.1.1  # only for testing
 matplotlib==3.3.3
 numpy==1.19.5
 pandas==1.2.0
@@ -6,3 +7,4 @@ pytest==6.2.1
 scikit-learn==0.24.1
 scipy==1.6.0
 seaborn==0.11.1
+xgboost==1.3.3  # only for testing
