--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: ¨3.10.4"
+        python-version: "3.10.4"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
