added requirements for docs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,3 +14,4 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
+   requirements: requirements.txt
