--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,4 +14,8 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
-   requirements: requirements.txt
+
+python:
+   install:
+   - requirements: requirements.txt
+	
