--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,5 +4,5 @@ coverage==6.4.4
 lightgbm==3.3.2
 pytest==7.1.3
 xgboost==1.6.2
-Sphinx==5.2.0.post0
-sphinx-rtd-theme==1.0.0
+Sphinx==5.3.0
+sphinx-rtd-theme==1.1.1
