--- a/.github/workflows/test_kaggle.yml
+++ b/.github/workflows/test_kaggle.yml
@@ -23,12 +23,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install flake8 pytest
-        if [ -f requirements_kaggle.txt ]; then pip install -r requirements_kaggle.txt; fi
+        pip install -r requirements_kaggle.txt
     - name: print root dir
       run: |
         ls -lh
     - name: Test with pytest
       run: |
-        pytest tests/ -W ignore::DeprecationWarning:is_sparse
+        pytest tests/ -W ignore::DeprecationWarning
