run ci in dev too

--- a/.github/workflows/test_kaggle.yml
+++ b/.github/workflows/test_kaggle.yml
@@ -5,9 +5,9 @@ name: Unit Tests for the Kaggle image
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
 
 jobs:
   build:
