--- a/requirements_kaggle.txt
+++ b/requirements_kaggle.txt
@@ -7,6 +7,7 @@ pandas==2.2.2
 pytest==8.2.2
 scikit-learn==1.2.2
 seaborn==0.12.2
+shap==0.44.1
 Sphinx==7.3.7
 sphinx-rtd-theme==2.0.0
 xgboost==2.0.3
