--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,7 @@ classifiers = [
     "Operating System :: Unix",
     "Operating System :: MacOS",
 ]
-dependencies = [
-    "matplotlib>=3.7.5",
-    "pandas>=2.2.2",
-    "scikit-learn>=1.2.2",
-    "seaborn>=0.12.2",
-]
+dependencies = ["kneed==0.8.5", "matplotlib>=3.7.5", "pandas>=2.2.2", "scikit-learn>=1.2.2,<1.6.1", "seaborn>=0.12.2", "shap>=0.45.0"]
 
 [project.optional-dependencies]
 testing = [
